--- a/article.tex
+++ b/article.tex
@@ -51,7 +51,7 @@
 \newcommand{\levelC}{\subsubsection}
 
 \author{Atila L. Romero\textsuperscript{$\dagger$}, Avelino F. Zorzo\textsuperscript{$\dagger$}{\let\thefootnote\relax\footnote{{\textsuperscript{$\dagger$}e-mails: \texttt{atilaromero@gmail.com, avelino.zorzo@pucrs.br}}}}}
-\title{Descriptive research on influence of number of classes in file fragment classification}
+\title{How the choice of file types influence results in file fragment classification}
 \date{}
 
 \begin{document}
