--- a/content/0-sections.tex
+++ b/content/0-sections.tex
@@ -32,8 +32,8 @@
     % \input{content/2.2-datacarvingtools.tex}
     % \levelB{Data carving challenges}
     % \input{content/2.3-challenges.tex}
-    \levelB{Neural networks researches in data carving}
-    \input{content/2.4-nn.tex}
+    % \levelB{Neural networks researches in data carving}
+    % \input{content/2.4-nn.tex}
 
 %2
 % \levelA{\label{chap:background}Some artificial neural networks}
@@ -52,20 +52,19 @@
 
 %4
 \levelA{\label{chap:experiments}Proposed method}
-\input{content/4-experiments.tex}
-% \input{content/4.0.1-researchonmodels.tex}
 
-\levelA{Results}
+\input{content/4-0.tex}
+
+\levelB{Method}
+\input{content/4-method.tex}
+
+\levelB{Results}
 \label{sec:numberofclasses}
-\input{content/4.0.2-researchonnumberofclasses.tex}
-% \input{content/4.0.3-experimentrandomdata.tex}
+\input{content/4-results.tex}
 
 %5
 \levelA{\label{chap:discussion}Discussion}
 \input{content/5-discussion.tex}
-
-    \levelB{Future work}
-    \input{content/5.1-futurework.tex}
 
 \levelA{\label{chap:conclusion}Conclusion}
 \input{content/6-conclusion.tex}
