--- a/content/2.1b-resultados-outros-trabalhos.tex
+++ b/content/2.1b-resultados-outros-trabalhos.tex
@@ -1,6 +1,6 @@
 This related work summary focuses on studies on file fragment classification that used the Govdocs1 dataset\cite{garfinkel_bringing_2009}.
 
-The early studies on data carving used private datasets, making it difficult to compare the results of different studies. In 2009, Garfinkel et al. \cite{garfinkel_bringing_2009} published the Govdocs1 dataset with 1 million files (a small amount of those files were removed later, for legal caution). While some of the later works on the field still use private datasets, the Govdocs1 dataset has become the most used choice in studies related to data carving.
+The early studies on data carving used private datasets, making it difficult to compare the results of different studies. In 2009, Garfinkel et al. \cite{garfinkel_bringing_2009} published the Govdocs1 dataset with 1 million files (a small amount of those files were removed later, for legal reasons). While some of the later works on the field still used private datasets, the Govdocs1 dataset has become the most used choice in studies related to data carving.
 
 Depending on the objective, the focus of each study may either be whole file classification or file fragment classification. Whole file classification is generally an easier task because most file types, even those with high entropy and low compression rates, have well-structured headers, with easily recognizable patterns.
 
