--- a/content/5-discussion.tex
+++ b/content/5-discussion.tex
@@ -1,33 +1,23 @@
+
 %fig 1
-\levelB{N classes}
+\levelB{Accuracy vs. number of classes}
 
-\ref{fig:nclasses}
+In figure \ref{fig:nclasses}, a decreasing trend was observed. An increase in the number of classes appears to be  correlated with a decrease in accuracy. Another relevant aspect of the graph is that the range of the results seems to be smaller when more classes are used.  
 
-An increase in the number of classes appears to be  correlated with a decrease in accuracy. Another relevant aspect of the graph is that the range of the results seems to be smaller when more classes are used.  
+This pattern is understandable: as the number of classes grows, the harder the classification problem is, leading to a decrease in accuracy. Meanwhile, the individual contributions of each class to the overall result diminishes, leading to an increase in precision.
 
-This pattern is understandable: as the number of classes grows, the harder the classification problem is, leading to a decrease in accuracy, while the individual contributions of each class to the overall result diminishes, leading to an increase in precision.
+This behavior is an important aspect to consider during the evaluation of file fragments studies. This observation is in agreement with Beebe et al. \cite{beebe_sceadan:_2013} assumption, that studies that select fewer classes tend to yield higher results. 
 
-This behavior is an important aspect to consider during the evaluation of file fragments studies. As Beebe et al. \cite{beebe_sceadan:_2013} have mentioned, studies that select fewer classes tend to yield higher results. 
+Still, with 42\% of samples being misclassified when the number of classes is 28, the question of what are the error sources and how they can be addressed requires attention.
 
-Still, with 46\% \todo{check} of samples being misclassified when the number of classes is 28, the question of what are the error sources and how they can be addressed requires attention.
+The number of possible combinations of file types to compose the datasets depends on the number of classes being considered. For 28 classes there is only one possible combination, while for two classes there are 378. For intermediary values, the numbers are much higher, which is the number of possible combinations disregarding the order of the elements: $ \frac{28!}{(28-n)!n!}$. For 14 file types there are 40116600 combinations. For this reason, the significance of the 5 samples diminishes for intermediary values.
 
-\levelB{Pairs of classes}
+\levelB{Accuracy of pairs of classes}
 
-\ref{fig:dual}
+The accuracy of models trained with pairs of classes, shown in figure \ref{fig:dual}, suggests a reverse correlation between entropy and accuracy.  Generally, file types with higher entropy tend to have lower minima, with the GIF file type being a notable exception. Most of these files use some form of compression, like image files for example.
 
-Generally, file types with higher entropy tend to have lower minima, with the GIF \todo{check} file type being a notable exception. Most of these files use some form of compression, like image files for example. 
+It was demonstrated that the accuracy of a new model may be manipulated by the selection of file types that will compose the dataset. The lines ``hard file types first'' and ``easy file types first'' of figure \ref{fig:nclasses} were created using the order shown on figure \ref{fig:dual}, resulting in lines that seem to be close to the minimum and maximum of the possible accuracy values. 
 
 \levelB{PCA}
 
-\ref{fig:pca} and \ref{fig:pca2}
-
-Again some file types with high entropy emerge as a promising group, \todo{check} ``dwf'',
-``jpg'',
-``pps'',
-``ppt'',
-``gz'',
-``png'',
-``pptx'',
-``swf'',
-``kmz'',
-and ``pdf''.
+The usage of PCA on the 28x28 distance matrix produced a 2D projection where the file types that use compression or contains images are grouped near each other, as shown in figures \ref{fig:pca} and \ref{fig:pca2}.
