--- a/content/6-conclusion.tex
+++ b/content/6-conclusion.tex
@@ -1,1 +1,9 @@
-It was observed that high accuracy in the file fragment classification task could be achieved only when the number of classes was small. Also, when compared with each other, file types with high entropy data showed the lowest accuracy values.
+It was observed that an increase in the number of extensions selected to compose the training had the tendency to decrease accuracy and increase precision. But the number of classes alone is not as important as the type of extension selected: some file types when included in the experiment have a much higher negative impact than others. This observation was demonstrated in the ``hard file types first'' and ``easy file types first'' of figure \ref{fig:nclasses}, where the file types selected to compose  where intentionally chosen, once to degrade results and once to improve them.
+
+File types that contains images or that use compression were identified as those that have the higher negative effect on results, which suggests that their entropy may contribute to the error.
+
+\levelB{Limitations, threats to validity and future work}
+
+The number of samples taken was small when compared with the number of all possible file types combinations. This imposes a limit on the conclusions that can be reached and this limitation is hard to overcome.
+
+The group that emerged as file types that most degrade results are files that use compression or contain images. While they are known for their high entropy, no measure of entropy was used to reinforce this claim. A study is in progress to measure the impact of entropy on file fragment classification errors.
